tests/ui/consts/const-eval/issue-49296.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-49296.rs:9:16
   |
LL | const X: u64 = *wat(42);
   |                ^^^^^^^^ pointer to alloc9 was dereferenced after this allocation got freed

note: erroneous constant used
  --> $DIR/issue-49296.rs:13:20
   |
LL |     println!("{}", X);
   |                    ^

note: erroneous constant used
  --> $DIR/issue-49296.rs:13:20
   |
LL |     println!("{}", X);
   |                    ^
   |
   = note: this note originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
  --> $DIR/issue-49296.rs:13:20
   |
LL |     println!("{}", X);
   |                    ^
   |
   = note: this note originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
